# tunetales-v1

./: .gitignore  README.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.backup/: FloatingNote.tsx  FloatingNotesLayer.tsx  StoryCard.tsx
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/artists/: ComingSoonArtist.tsx
app/components/: FloatingNote.tsx  FloatingNotes.tsx  FloatingNotesLayer.tsx  StoryCard.tsx
app/hooks/: useWhyDidYouUpdate.ts
app/lib/: data.ts  types.ts
backend/: .env.example  pyproject.toml
backend/api/: R&D.md
backend/api/research/: debug_timeline.py  perplexity_api.py
backend/services/ai/: claude_client.py
data/: artists.json
data/research/: album_info_Frank_Ocean_a2c87517_20250618_013027.json  artist_info_Frank_Ocean_3404d11b_20250920_183244.json  artist_info_Frank_Ocean_a055aaf2_20250920_184347.json  artist_info_Frank_Ocean_a4bedf80_20250920_184434.json  artist_info_Frank_Ocean_a9c569ef_20250618_012851.json  artist_info_Frank_Ocean_a9c569ef_20250919_212154.json  artist_info_Frank_Ocean_a9c569ef_20250920_183547.json  artist_info_Frank_Ocean_c5c40bc1_20250919_212525.json  timeline_Frank_Ocean_823190dd_20250618_013614.json
data/stories/: frank-ocean.json  narrative_Frank_Ocean_overview_20250620_044216.json  narrative_Frank_Ocean_overview_20250620_045521.json  narrative_Frank_Ocean_overview_20250919_210614.json
scripts/: verify-files.js
src/app/: layout.tsx
tests/: data.test.ts
tests/api/: artists.test.ts
tests/components/: StoryCard.test.tsx
(+14 files in other folders)
